<?xml version="1.0"?>
<package format="2">
  <name>or_octomap_plugin</name>
  <version>0.0.0</version>
  <description>
    OpenRAVE collision checker plugin which uses octomap.
  </description>
  <author email="yanyu@ntu.edu.sg">Yan Yu</author>
  <maintainer email="yanyu@ntu.edu.sg">Yan Yu</maintainer>
  <license>BSD 3-Clause</license>
  <url type="repository">https://github.com/crigroup/or_octomap_plugin</url>
  <url type="bugtracker">https://github.com/crigroup/or_octomap_plugin/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>openrave_catkin</depend>
  <depend>roscpp</depend>
  <depend>octomap_ros</depend>
  <depend>octomap</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>octomap_server</depend>

  <export>
    <openrave plugins="${prefix}/lib"/>
  </export>
</package>
